--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1 id="main">Главная страница</h1>
+    <p>подзаголовок</p>
     <p class="block">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat vel magnam nam accusamus tenetur asperiores ex laboriosam sequi id error, ducimus quibusdam ullam minima nobis, voluptates praesentium dolorem aliquid. In!</p>
     <p class="my_p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, cumque harum beatae dignissimos reiciendis in itaque laborum quos obcaecati provident, pariatur amet asperiores neque magnam voluptatum fugit cum natus! Doloremque.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod beatae obcaecati, nisi magnam voluptate porro molestiae velit nobis perferendis nesciunt soluta dolores voluptas dolorem alias assumenda necessitatibus a, ducimus saepe.</p>
